--- a/_layouts/fable.html
+++ b/_layouts/fable.html
@@ -1,14 +1,36 @@
 ---
 layout: default
 ---
-<div class="post">
+<article>
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
+  <header>
+    <h1>{{ page.title }}</h1>
   </header>
 
-  <article class="post-content">
+  <section>
     {{ content }}
-  </article>
+  </section>
 
-</div>
+  {%if page.animals %}
+  <section>
+      {% for page_animal in page.animals %}
+        {% for animal in site.data.animals %}
+          {% if page_animal == animal.name %}
+            <figure>
+              {{ animal.shape }}
+              <figcaption>{{ animal.name }}</figcaption>
+            </figure>
+          {% endif %}
+        {% endfor %}
+      {% endfor %}
+  </section>
+  {% endif %}
+
+  {% if page.moral %}
+  <section>
+    {{ page.moral }}
+  </section>
+  {% endif %}
+
+
+</article>
