--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,12 +4,16 @@
   {% include head.html %}
 
   <body>
+    
+    <main>
 
-    {% include navigation.html %}
+      {% include navigation.html %}
 
-    {{ content }}
+      {{ content }}
 
-    {% include footer.html %}
+      {% include footer.html %}
+
+    </main>
 
   </body>
 
