--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,36 @@
 ---
 @charset "utf-8";
 
-// Import partials from `sass_dir`
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 @import
-  "style"
+  // "../../bower_components/reset-scss/reset.scss",
+  "../../bower_components/normalize-scss/_normalize.scss",
+  // "../../bower_components/sanitize-css/sanitize.scss",
+  "../../bower_components/typographic/scss/typographic.scss",
+  "style",
+  "flex"
 ;
+
+$line-height-ratio  : 1.75;
+$header-ratio       : $perfect-fourth;
+$body-font          : $garamond;
+$body-font-weight   : 300;
+$body-color         : #666;
+$header-font        : $futura;
+$header-font-weight : 600;
+$header-color       : #111;
+$min-font           : 13px;
+$max-font           : 20px;
+$min-width          : 600px;
+$max-width          : 1000px;
+$vertical-rhythm    : true;
+
+@include typographic();
+
+main {
+  max-width: 50em;
+  margin: 0 auto;
+}
