--- a/css/main.scss
+++ b/css/main.scss
@@ -8,28 +8,6 @@
 }
 
 @import
-  "typographic",
-  "style",
-  "flex"
+  "marx.min.css",
+  "style"
 ;
-
-$line-height-ratio  : 1.75;
-$header-ratio       : $golden;
-$body-font          : $garamond;
-$body-font-weight   : 300;
-$body-color         : #666;
-$header-font        : $futura;
-$header-font-weight : 600;
-$header-color       : #111;
-$min-font           : 13px;
-$max-font           : 20px;
-$min-width          : 600px;
-$max-width          : 1000px;
-$vertical-rhythm    : true;
-
-@include typographic();
-
-main {
-  max-width: 40em;
-  margin: 0 auto;
-}
