--- a/_layouts/fable.html
+++ b/_layouts/fable.html
@@ -1,36 +1,37 @@
 ---
 layout: default
 ---
-<article>
+<header>
+  <h1>{{ page.title }}</h1>
+</header>
 
-  <header>
-    <h1>{{ page.title }}</h1>
-  </header>
+<article>
 
   <section>
     {{ content }}
   </section>
 
-  {%if page.animals %}
-  <section>
-      {% for page_animal in page.animals %}
-        {% for animal in site.data.animals %}
-          {% if page_animal == animal.name %}
-            <figure>
-              {{ animal.shape }}
-              <figcaption>{{ animal.name }}</figcaption>
-            </figure>
-          {% endif %}
-        {% endfor %}
-      {% endfor %}
-  </section>
-  {% endif %}
-
   {% if page.moral %}
   <section>
-    {{ page.moral }}
+    <blockquote>
+      {{ page.moral }}
+    </blockquote>
   </section>
   {% endif %}
 
-
 </article>
+
+{%if page.animals %}
+<aside>
+    {% for page_animal in page.animals %}
+      {% for animal in site.data.animals %}
+        {% if page_animal == animal.name %}
+          <figure class="animal_picture">
+            {{ animal.shape }}
+            <figcaption>{{ animal.name }}</figcaption>
+          </figure>
+        {% endif %}
+      {% endfor %}
+    {% endfor %}
+</aside>
+{% endif %}
