--- a/assets/sass/_style.scss
+++ b/assets/sass/_style.scss
@@ -12,11 +12,10 @@
     padding: 0.8rem 0;
     overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
+    color: #1271db;
     &:not(:last-of-type) {
       border-bottom: .1rem solid rgba(0, 0, 0, .2);
-    }
-    a {
-      white-space: nowrap;
     }
   }
 }
