--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,6 +6,6 @@
         <li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
       {% endif %}
     {% endfor %}
-    <li><a href="{{ "/news/" | prepend: site.baseurl }}">News</a></li>
+    <li><a href="{{ "/updates/" | prepend: site.baseurl }}">Updates</a></li>
   </ul>
 </nav>
